# moui

./: .gitignore  .gitmodules  README.md
android/: .gitignore  AndroidManifest.xml  CMakeLists.txt  build.gradle
android/jni/: application.cc  clock.cc  jni.gyp  opengl_view.cc  renderer.cc
android/src/com/ollix/moui/: Application.java  Clock.java  Device.java  NativeView.java  OpenGLRenderer.java  OpenGLView.java  Platform.java  Window.java
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: clock.cc  fragment.cc  view.cc
android/src/main/java/com/ollix/moui/: Clock.kt  Device.kt  MouiFragment.kt  NativeView.kt  OpenGLView.kt  Path.kt  View.kt  Window.kt
cmake/: android_toolchain.cmake  hunter.cmake
moui/: CMakeLists.txt  base.h  bgfx.gyp  bimg.gyp  bx.gyp  common.gypi  defines.h  freetype.gyp  moui.gyp  moui.h  nanovg.gyp  nanovg_hook.cc  nanovg_hook.h  opengl.h  opengl_hook.h
moui/core/: application.h  base_application.cc  base_application.h  clock.h  core.h  device.h  event.cc  event.h  log.h  path.h  platform.h  utility-inl.h
moui/core/android/: application.cc  application.h  application_android.cc  clock.cc  clock_android.cc  device.cc  device_android.cc  path_android.cc  platform.cc
moui/core/apple/: clock_apple.mm  device.mm  device_apple.mm  path.mm  path_apple.mm  platform.mm
moui/native/: native.h  native_object.h  native_view.h  native_window.h
moui/native/android/: native_object_android.cc  native_view_android.cc  native_window_android.cc  native_window_android.mm
moui/native/ios/: native_application.h  native_application_ios.mm  native_object_ios.mm  native_view_controller.h  native_view_controller_ios.mm  native_view_ios.mm  native_window_ios.mm
moui/native/mac/: native_object_mac.mm  native_view_mac.mm  native_window_mac.mm
moui/ui/: base_view.cc  base_view.h  base_window.cc  base_window.h  native_view.h  ui.h  view.h  window.h
moui/ui/android/: native_view.cc  native_view_android.cc  view.cc  view_android.cc  window.cc  window_android.cc
moui/ui/ios/: MOMetalView.h  MOMetalView.mm  MOOpenGLView.h  MOOpenGLView.mm  MOOpenGLViewController.h  MOOpenGLViewController.mm  MOView.h  MOView.mm  metal_view_ios.h  metal_view_ios.mm  native_view.mm  native_view_ios.mm  opengl_view_controller_ios.h  opengl_view_controller_ios.mm  opengl_view_ios.h  opengl_view_ios.mm  view.mm  view_ios.mm  window.mm  window_ios.mm
moui/ui/mac/: MOMetalView.h  MOMetalView.mm  MOOpenGLView.h  MOOpenGLView.mm  MOView.h  MOView.mm  native_view.mm  native_view_mac.mm  opengl_view_mac.h  opengl_view_mac.mm  view.mm  view_mac.mm  window.mm  window_mac.mm
moui/widgets/: activity_indicator_view.cc  activity_indicator_view.h  button.cc  button.h  control.cc  control.h  grid_layout.cc  grid_layout.h  label.cc  label.h  layout.cc  layout.h  linear_layout.cc  linear_layout.h  page_control.cc  page_control.h  progress_view.cc  progress_view.h  scroll_view.cc  scroll_view.h  scroller.cc  scroller.h  switch.cc  switch.h  table_view.cc  table_view.h  table_view_cell.cc  table_view_cell.h  widget.cc  widget.h  widget_view.cc  widget_view.h  widgets.h
tools/: cclint.sh
